karnal64/main.d

import core.stdc.stdint;
import core.stdc.stddef;
import core.stdc.stdio; // Kernel debug çıktıları için (normalde kernel kendi log mekanizmasını kullanır)
import core.string;     // toStringz için

// Çekirdek içindeki düşük seviye başlıkları import et veya bind et
// D'nin C başlıklarını doğrudan import etme yetenekleri vardır, ancak
// basitlik veya tüm derleyicilerle uyum için extern(C) içinde manüel bind edilebilir.
// Burada manüel bind etme yaklaşımını kullanacağız.

// hardware_specific.h ve kernel_memory.h'den bind edilecekler
extern(C) {
    // Hardware types
    alias uint64_t paddr_t; // Varsayım: 64-bit adresler
    alias uint64_t vaddr_t; // Varsayım: 64-bit adresler

    // Hardware functions
    void low_level_hardware_init();
    void low_level_memory_init();
    void low_level_console_putc(char c); // Debug çıktı için
    // TODO: Diğer hardware_specific fonksiyonları
}

// karnal.h'den bind edilecekler
extern(C) {
    // Karnal64 types
    alias int64_t kerror_t;
    alias uint64_t ktid_t;
    alias uint64_t kthread_id_t; // Varsayım: Thread ID'ler u64
    alias uint64_t khandle_t;

    // Karnal64 error constants
    enum KSUCCESS = 0;
    enum KERROR_PERMISSION_DENIED = -1;
    // ... Diğer KERROR_* sabitleri karnal.h'den buraya bind edilmeli ...
    enum KERROR_INVALID_ARGUMENT = -3;
    enum KERROR_BAD_HANDLE = -9;
    enum KERROR_NOT_FOUND = -2; // Örnek için birkaç tane bind ettik

    // KarnalResourceProviderC_t struct binding
    // Bu struct, C tarafında implemente edilen ResourceProvider'ları temsil eder.
    // D tarafında, D objelerini kaydederken bu yapıyı dolduracağız.
    struct KarnalResourceProviderC {
        extern(C) int64_t function(void* provider_data, uint8_t* buffer, size_t size, uint64_t offset) read_fn;
        extern(C) int64_t function(void* provider_data, const uint8_t* buffer, size_t size, uint64_t offset) write_fn;
        extern(C) int64_t function(void* provider_data, uint64_t request, uint64_t arg) control_fn;
        // TODO: Diğer ResourceProvider trait fonksiyonları için function pointer'lar
        void* provider_data; // Implementasyon verisine pointer (D objesine pointer olabilir)
    }


    // Karnal64 API functions binding
    void karnal_init();

    int64_t karnal_memory_allocate(size_t size);
    int64_t karnal_memory_release(uint64_t ptr, size_t size);

    int64_t karnal_task_spawn(khandle_t code_handle_value, const uint8_t* args_ptr, size_t args_len);
    void karnal_task_exit(int32_t code); // D'de 'noreturn' genellikle belirtilmez, davranış beklenir

    int64_t karnal_task_current_id();
    int64_t karnal_task_sleep(uint64_t milliseconds);
    int64_t karnal_thread_create(uint64_t entry_point, size_t stack_size, uint64_t arg);
    void karnal_thread_exit(int32_t code); // D'de 'noreturn'
    int64_t karnal_task_yield();

    int64_t karnal_resource_acquire(const uint8_t* resource_id_ptr, size_t resource_id_len, uint32_t mode);
    int64_t karnal_resource_read(khandle_t handle_value, uint8_t* user_buffer_ptr, size_t user_buffer_len);
    int64_t karnal_resource_write(khandle_t handle_value, const uint8_t* user_buffer_ptr, size_t user_buffer_len);
    int64_t karnal_resource_release(khandle_t handle_value);
    int64_t karnal_resource_control(khandle_t handle_value, uint64_t request, uint64_t arg);

    int64_t karnal_kernel_get_info(uint32_t info_type);
    int64_t karnal_kernel_get_time();

    int64_t karnal_sync_lock_create();
    int64_t karnal_sync_lock_acquire(khandle_t handle_value);
    int64_t karnal_sync_lock_release(khandle_t handle_value);

    int64_t karnal_messaging_send(ktid_t target_task_id_value, const uint8_t* message_ptr, size_t message_len);
    int64_t karnal_messaging_receive(uint8_t* user_buffer_ptr, size_t user_buffer_len);

    // C tarafından kaydedilecek ResourceProvider için D bindingi
    int64_t karnal_resource_register_c_provider(const uint8_t* id_ptr, size_t id_len, const KarnalResourceProviderC* provider_c_fns);
}


// --- Çekirdek Bileşeni Örneği: D Konsol Aygıt Struct'ı ---
// Bu D struct veya class'ı, Karnal64'ün ResourceProvider işlevselliğini
// sağlamak için gerekli veriyi ve mantığı tutar.

struct KernelConsoleDeviceD {
    int internal_state = 0; // D struct'ın iç durumu

    // ResourceProvider arayüzüne karşılık gelen D metodları
    // Bu metodlar, aşağıda tanımlanan C wrapper fonksiyonları tarafından çağrılır.

    kerror_t Read(uint8_t* buffer, size_t size, uint64_t offset) {
        if (size == 0) return KSUCCESS;
        if (buffer is null) return KERROR_INVALID_ARGUMENT; // D'de null kontrolü

        // Yer Tutucu: Simülasyon
        buffer[0] = cast(uint8_t)'D'; // Simüle okunan karakter
        internal_state = 10;
        return 1; // Okunan byte sayısı
    }

    kerror_t Write(const uint8_t* buffer, size_t size, uint64_t offset) {
        if (size == 0) return KSUCCESS;
        if (buffer is null) return KERROR_INVALID_ARGUMENT;

        // Yer Tutucu: Simülasyon (düşük seviye çıktı kullanmalıyız)
        
        foreach (i; 0..size) {
            low_level_console_putc(cast(char)buffer[i]);
        }
        
        internal_state = 20;
        return cast(int64_t)size; // Yazılan byte sayısı
    }

    kerror_t Control(uint64_t request, uint64_t arg) {
        internal_state = 30;
        // Yer Tutucu:
        return KSUCCESS;
    }

    // TODO: Diğer ResourceProvider metodları...
}

// --- D Metodlarını C Fonksiyonlarına Sarmalayan Wrapper'lar ---
// Karnal64'ün KarnalResourceProviderC yapısına uygun, extern(C) ile tanımlanmış D fonksiyonları.

extern(C) int64_t kernel_console_read_wrapper_d(void* provider_data, uint8_t* buffer, size_t size, uint64_t offset) {
    // provider_data'yı D struct pointer'ına geri cast et
    KernelConsoleDeviceD* device = cast(KernelConsoleDeviceD*)provider_data;
    // D metodunu çağır ve sonucu döndür
    return device.Read(buffer, size, offset);
}

extern(C) int64_t kernel_console_write_wrapper_d(void* provider_data, const uint8_t* buffer, size_t size, uint64_t offset) {
    KernelConsoleDeviceD* device = cast(KernelConsoleDeviceD*)provider_data;
    return device.Write(buffer, size, offset);
}

extern(C) int64_t kernel_console_control_wrapper_d(void* provider_data, uint64_t request, uint64_t arg) {
    KernelConsoleDeviceD* device = cast(KernelConsoleDeviceD*)provider_data;
    return device.Control(request, arg);
}
// TODO: Diğer wrapper fonksiyonları...


// Statik olarak D struct instance'ını oluştur (çekirdek veri segmentinde yaşar)
// veya çekirdek içi bir new operatörü implemente edildiyse heap'te oluşturulabilir.
KernelConsoleDeviceD g_console_device_d;


// --- Çekirdek Ana Fonksiyonu (D Giriş Noktası) ---
// Bootloader'dan kontrolü alan D kodu.
// Geri dönmemelidir.
void main() {
    // --- 1. Çok Düşük Seviye Çekirdek Başlatma (Yer Tutucu) ---
    low_level_hardware_init();
    low_level_memory_init();

    // NOT: D runtime'ın (global constructorlar vb.) burada başlatıldığı varsayılır.

     low_level_console_putc('>'); // Boot sırası işareti debug

    // --- 2. Karnal64 API'sını Başlat ---
    karnal_init();

    // --- 3. Çekirdek Bileşenlerini Karnal64'e Kaydet ---
    // KernelConsoleDeviceD struct'ı gibi D bileşenlerini Karnal64'e kaydet.
    // D objesi için C wrapper fonksiyonlarını ve KarnalResourceProviderC yapısını kullanmalıyız.

    string console_resource_id = "karnal://device/console"; // D string
    khandle_t console_handle;

    // KarnalResourceProviderC yapısını doldur
    KarnalResourceProviderC console_provider_fns = {
        read_fn: &kernel_console_read_wrapper_d, // D function pointer al
        write_fn: &kernel_console_write_wrapper_d,
        control_fn: &kernel_console_control_wrapper_d,
        // ...
        provider_data: cast(void*)&g_console_device_d // D objesinin pointer'ını void*'a cast et
    };

    // Karnal64'e kaydet
    int64_t reg_result = karnal_resource_register_c_provider(
        cast(const uint8_t*)toStringz(console_resource_id), // D string -> C null-terminated string -> uint8_t*
        console_resource_id.length,                       // D string uzunluğu
        &console_provider_fns                             // C yapı pointer'ı
    );

    if (reg_result < KSUCCESS) { // D'de enum değerleri kullanılabilir
        // Kayıt başarısız - çekirdek paniği
         low_level_panic("Failed to register D console resource!");
        while(1) {} // Hata durumunda sonsuz döngü
    }
    console_handle = cast(khandle_t)reg_result; // Başarı durumunda dönen değer dahili handle'dır

    // TODO: Diğer D çekirdek bileşenlerini (eğer varsa) ResourceProvider olarak kaydet.


    // --- 4. İlk Kullanıcı Alanı Görevini Başlat ---
    khandle_t init_code_handle = 1; // Yer tutucu handle
    ktid_t init_task_id;

    const uint8_t* init_args_ptr = null; // D'de null
    size_t init_args_len = 0;

    int64_t spawn_result = karnal_task_spawn(init_code_handle, init_args_ptr, init_args_len);

     if (spawn_result < KSUCCESS) {
        // Init görevi başlatılamadı - çekirdek paniği
         low_level_panic("Failed to spawn initial task!");
        while(1) {}
    }
    init_task_id = cast(ktid_t)spawn_result;


    // --- 5. Çekirdek Ana Döngüsü (Zamanlayıcı) ---
     low_power_idle_loop(); // Veya
    while(1) {
        // Çekirdek boşta döngüsü (D stili)
         core.thread.Thread.yield(); // Kernel thread yield gerektirir
    }

    // Buraya asla ulaşılmamalı.
}
